Fixing contrast issue in footer

--- a/assets/css/public/lbcc.css
+++ b/assets/css/public/lbcc.css
@@ -204,14 +204,6 @@ img.main_logo {
     text-align: center;
 }
 
-#footer a, #footer a:link, #footer a:visited {
-    color: #888;
-}
-
-#footer a:hover {
-    color: #ccc;
-}
-
 /* Guide Tools */
 
 
